[gd_scene load_steps=2 format=3 uid="uid://bop4g007gumea"]

[ext_resource type="Script" path="res://ProgressIndicator.gd" id="1_4x5y"]

[node name="ProgressIndicator" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
custom_minimum_size = Vector2(400, 0)
script = ExtResource("1_4x5y")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.2, 0.2, 0.2, 0.9)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="ProgressTitle" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Progress"
horizontal_alignment = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="LeftColumn" type="VBoxContainer" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentVerbLabel" type="Label" parent="VBoxContainer/ContentContainer/LeftColumn"]
layout_mode = 2
text = "Current: Tener"
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)

[node name="VerbsCompletedLabel" type="Label" parent="VBoxContainer/ContentContainer/LeftColumn"]
layout_mode = 2
text = "Completed: 0/3"
theme_override_colors/font_color = Color(0.8, 0.8, 1, 1)

[node name="RightColumn" type="VBoxContainer" parent="VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VerbEndingLabel" type="Label" parent="VBoxContainer/ContentContainer/RightColumn"]
layout_mode = 2
text = "Ending: -er"
theme_override_colors/font_color = Color(1, 1, 0.8, 1)

[node name="TotalErrorsLabel" type="Label" parent="VBoxContainer/ContentContainer/RightColumn"]
layout_mode = 2
text = "Total Errors: 0"
theme_override_colors/font_color = Color(1, 0.9, 0.8, 1)
